--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.juwan.orlandowaves.Register">
+    tools:context="com.example.juwan.orlandowaves.ActivityClass.Register">
 
     <TextView
         android:text="TextView"
