--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.juwan.orlandowaves.Shop">
+    tools:context="com.example.juwan.orlandowaves.Fragments.ShopFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
