--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,50 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
  <include layout="@layout/tabs"/>
 
-</FrameLayout>
+ <LinearLayout
+     android:orientation="vertical"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:weightSum="5">
+
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="2"
+      app:srcCompat="@drawable/wavesapp"
+      android:id="@+id/imageView2"
+      android:scaleType="centerCrop" />
+
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      app:srcCompat="@drawable/saleapp"
+      android:id="@+id/imageView3"
+      android:scaleType="centerCrop" />
+
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      app:srcCompat="@drawable/teamapp"
+      android:id="@+id/imageView4"
+      android:layout_weight="1"
+      android:scaleType="centerCrop" />
+
+  <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      app:srcCompat="@mipmap/logo"
+      android:id="@+id/imageView5"
+      android:layout_weight="1"
+      android:scaleType="centerCrop" />
+
+ </LinearLayout>
+
+</LinearLayout>
