--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -1,11 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_profile"
+    android:id="@+id/activity_shop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.juwan.orlandowaves.ActivityClass.Shop"
-    android:orientation="vertical">
+    tools:context="com.juwan.orlandowaves.com.juwan.orlandowaves.ActivityClass.Shop"
+    >
+    <include layout="@layout/viewpager_frags"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <include layout="@layout/tabs"/>
-</LinearLayout>
+
+
+        <include layout="@layout/tabs"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:text="@string/tix"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView2" />
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numColumns="3"
+                android:columnWidth="100dp"
+                android:stretchMode="columnWidth"
+                android:useDefaultMargins="true">
+
+                <ImageView
+                    android:layout_width="150px"
+                    android:layout_height="150px"
+                    app:srcCompat="@mipmap/logodark"
+                    android:id="@+id/imageView9"
+                    android:scaleType="fitStart" />
+
+                <ImageView
+                    android:layout_width="150px"
+                    android:layout_height="150px"
+                    app:srcCompat="@mipmap/logo"
+                    android:id="@+id/imageView7" />
+            </GridLayout>
+
+            <TextView
+                android:text="@string/merch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3" />
+        </LinearLayout>
+    </ScrollView>
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
