--- a/app/src/main/res/layout/custom_grid_single.xml
+++ b/app/src/main/res/layout/custom_grid_single.xml
@@ -1,18 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="90dp"
-        app:srcCompat="@mipmap/logo"
-        android:id="@+id/imageView10"
-        android:layout_height="90dp" />
+        android:id="@+id/productImage"
+        android:layout_width="105dp"
+        android:layout_height="105dp"
+        android:layout_centerInParent="false"
+        app:srcCompat="@mipmap/logo" android:contentDescription="TODO" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
+        android:id="@+id/name"
+        android:layout_width="105dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4" />
-</LinearLayout>
+        android:layout_alignLeft="@+id/productImage"
+        android:layout_alignRight="@+id/productImage"
+        android:layout_below="@+id/productImage"
+        android:layout_centerInParent="false"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="105dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name"
+        android:layout_below="@+id/name"
+        android:layout_centerInParent="false"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:text="TextView"
+        android:textAlignment="center" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/name"
+        android:layout_alignEnd="@+id/productImage"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/productImage"
+        android:layout_centerInParent="false" />
+</RelativeLayout>
