--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -27,6 +27,12 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/viewcart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="View Cart" />
+
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="match_parent"
