--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,50 +5,71 @@
     android:id="@+id/activity_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.juwan.orlandowaves.com.juwan.orlandowaves.ActivityClass.Profile"
+    tools:context="com.juwan.orlandowaves.ActivityClass.Profile"
     android:orientation="vertical">
 
     <include layout="@layout/tabs"/>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:srcCompat="@mipmap/logodark"
-            android:id="@+id/imageView6"
-            android:scaleType="centerCrop" />
-
-        <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/Name"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:textStyle="normal|bold"
-            android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="2">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:weightSum="3">
 
-            <Button
-                android:text="Logout"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:scaleType="centerCrop"
+                app:srcCompat="@mipmap/logodark" />
+
+            <TextView
+                android:id="@+id/Name"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/logout"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Your Name"
                 android:textAlignment="center"
-                android:layout_gravity="center" />
+                android:textSize="24sp"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:id="@+id/FBC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="Become FBC"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="normal|bold" />
+
+
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Logout"
+                android:textAlignment="center" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
