--- a/app/src/main/res/layout/single_ticket_item.xml
+++ b/app/src/main/res/layout/single_ticket_item.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/nameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Name"
@@ -41,6 +41,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Quantity" />
+        <TextView
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Price" />
 
     </LinearLayout>
 </RelativeLayout>
